--- a/index.html
+++ b/index.html
@@ -10,178 +10,237 @@
     header{display:flex;justify-content:center;margin-bottom:1rem}
     input,select,button{font-size:1rem;padding:0.5rem;margin:0.25rem 0;width:100%;box-sizing:border-box}
     button{cursor:pointer;background:#4caf50;color:#fff;border:none;border-radius:4px}
-    button:hover{opacity:0.9}
+    button:hover{opacity:.9}
     .card{background:#fff;border-radius:8px;padding:1rem;margin-bottom:1rem;box-shadow:0 2px 4px rgba(0,0,0,.1)}
-    .balance{font-size:2rem;font-weight:bold;text-align:center;margin:0.5rem 0}
-    .txn{display:flex;justify-content:space-between;padding:0.25rem 0;border-bottom:1px solid #eee}
+    .balance{font-size:2rem;font-weight:bold;text-align:center;margin:.5rem 0}
+    .txn{display:flex;justify-content:space-between;padding:.25rem 0;border-bottom:1px solid #eee}
     .txn:last-child{border-bottom:none}
     .quick-login{display:flex;justify-content:space-around;margin-top:1rem}
-    .quick-login button{width:auto;padding:0.5rem 1rem;color:#fff;border:none;border-radius:4px;font-weight:bold}
+    .quick-login button{width:auto;padding:.5rem 1rem;color:white;border:none;border-radius:4px;font-weight:bold}
     .quick-abdullah{background:blue}
     .quick-musab{background:green}
-    .top-actions{display:flex;justify-content:flex-end;gap:0.5rem;margin-bottom:0.5rem}
-    .link-btn{background:#2196f3}
+    .logout-btn{background:#f44336;margin-top:1rem}
   </style>
 </head>
 <body>
-  <header><h2>Kids Bank</h2></header>
 
-  <div id="login" class="card">
-    <h3>Login</h3>
-    <input id="username" placeholder="Username"/>
-    <input id="password" type="password" placeholder="Password"/>
-    <button id="loginBtn">Login</button>
-    <p id="loginErr" style="color:red"></p>
-    <div class="quick-login">
-      <button id="btnAbdullah" class="quick-abdullah">Abdullah</button>
-      <button id="btnMusab" class="quick-musab">Musab</button>
-    </div>
-  </div>
+<header><h2>Kids Bank</h2></header>
 
-  <div id="parentPanel" class="hidden">
-    <div class="top-actions"><button id="logoutParent">Logout</button></div>
-    <div class="card">
-      <h3>Give / Take Money</h3>
-      <select id="childSelect"></select>
-      <select id="txnType"><option value="credit">Credit</option><option value="debit">Debit</option></select>
-      <input id="reason" placeholder="Reason"/>
-      <input id="amount" type="number" placeholder="Amount"/>
-      <button id="giveBtn">Send</button>
-    </div>
-    <div id="parentBalances" class="card"></div>
+<div id="login" class="card">
+  <h3>Login</h3>
+  <input id="username" placeholder="Username" autocomplete="off"/>
+  <input id="password" type="password" placeholder="Password" autocomplete="off"/>
+  <button id="loginBtn">Login</button>
+  <p id="loginErr" style="color:red;"></p>
+  <div class="quick-login">
+    <button id="btnAbdullah" class="quick-abdullah">Abdullah</button>
+    <button id="btnMusab" class="quick-musab">Musab</button>
   </div>
+</div>
 
-  <div id="childPanel" class="hidden">
-    <div class="top-actions"><button id="switchUser" class="link-btn">Switch&nbsp;Child</button><button id="logoutChild">Logout</button></div>
-    <div class="card"><h3>Hello, <span id="childName"></span></h3><div class="balance" id="childBalance">0</div></div>
-    <div class="card"><h3>Transactions</h3><div id="childTxns"></div></div>
+<div id="parentPanel" class="hidden">
+  <div class="card">
+    <h3>Give / Take Money</h3>
+    <select id="childSelect"></select>
+    <select id="txnType">
+      <option value="credit">Credit</option>
+      <option value="debit">Debit</option>
+    </select>
+    <input id="reason" placeholder="Reason"/>
+    <input id="amount" type="number" placeholder="Amount"/>
+    <button id="giveBtn">Send</button>
+    <button id="parentLogout" class="logout-btn">Logout</button>
   </div>
+  <div id="parentBalances" class="card"></div>
+</div>
+
+<div id="childPanel" class="hidden">
+  <div class="card">
+    <h3>Hello, <span id="childName"></span></h3>
+    <div class="balance" id="childBalance">0</div>
+    <select id="switchChild"></select>
+    <button id="childLogout" class="logout-btn">Logout</button>
+  </div>
+  <div class="card">
+    <h3>Transactions</h3>
+    <div id="childTxns"></div>
+  </div>
+</div>
 
 <script>
-/*************************** CONFIG *********************************/
-const BIN_ID  = 'YOUR_BIN_ID_HERE';  // <-- replace
-const API_KEY = 'YOUR_API_KEY_HERE'; // <-- replace (master key)
-const BASE_URL      = `https://api.jsonbin.io/v3/b/${BIN_ID}`;
-const LAST_USER_KEY = 'kidsBankLastUser';
-
-/************************ DEFAULT DATA ******************************/
-const defaultData = {
-  users: {
-    abdullah: { password: '1234', role: 'child' },
-    musab:    { password: '1234', role: 'child' },
-    parent:   { password: 'admin', role: 'parent' }
+/* ====== CONFIG ====== */
+const BIN_ID   = "687bd846480911522001db09";
+const API_KEY  = "$2a$10$BB0v8qWkEKADSXDUG7azp.6KMczQbobXJNaM.Xx1qPOCNz7S7smpe";
+const MAX_TXNS = 20;
+const DEFAULT_DATA = {
+  users:{
+    abdullah:{password:'1234',role:'child'},
+    musab:{password:'1234',role:'child'},
+    parent:{password:'admin',role:'parent'}
   },
-  accounts: {
-    abdullah: { balance: 0, transactions: [] },
-    musab:    { balance: 0, transactions: [] }
+  accounts:{
+    abdullah:{balance:0,transactions:[]},
+    musab:{balance:0,transactions:[]}
   }
 };
+const CLOUD_URL = `https://api.jsonbin.io/v3/b/${BIN_ID}/latest`;
 
-/************************* HELPERS *********************************/
-const headers = { 'Content-Type': 'application/json', 'X-Master-Key': API_KEY };
+/* ====== state ====== */
+let data = null;
+let currentUser = null;
 
-async function loadData() {
-  try {
-    const r = await fetch(`${BASE_URL}/latest`, { headers });
-    if (r.status === 404) {
-      await fetch(BASE_URL, { method: 'POST', headers, body: JSON.stringify({ record: defaultData }) });
-      return structuredClone(defaultData);
+/* ====== helpers ====== */
+async function loadData(){
+  try{
+    const res = await fetch(CLOUD_URL,{
+      headers:{'X-Master-Key':API_KEY,'X-Bin-Meta':'false'}
+    });
+    if(res.status===404){
+      return structuredClone(DEFAULT_DATA);
     }
-    const j = await r.json();
-    return j.record || j;
-  } catch (e) {
-    console.error('loadData error', e);
-    return structuredClone(defaultData);
+    const json = await res.json();
+    return json;
+  }catch(err){
+    console.error('loadData failed',err);
+    return structuredClone(DEFAULT_DATA);
   }
 }
-
-async function saveData(newData) {
-  for (const acc of Object.values(newData.accounts)) acc.transactions = (acc.transactions||[]).slice(0,20);
-  const res = await fetch(BASE_URL, { method: 'PUT', headers, body: JSON.stringify({ record: newData }) });
-  if (!res.ok) { const txt = await res.text(); alert('Save failed '+res.status); throw new Error(txt);}  
+async function saveData(newData){
+  // cap transactions
+  Object.values(newData.accounts).forEach(acc=>{
+    acc.transactions = acc.transactions.slice(0,MAX_TXNS);
+  });
+  try{
+    await fetch(`https://api.jsonbin.io/v3/b/${BIN_ID}`,{
+      method:'PUT',
+      headers:{
+        'Content-Type':'application/json',
+        'X-Master-Key':API_KEY
+      },
+      body:JSON.stringify({record:newData})
+    });
+  }catch(err){
+    console.error('saveData failed',err);
+    alert('Could not save data. Check console.');
+  }
 }
+function setLastUser(u){ localStorage.setItem('kidsBankLastUser',u); }
+function clearLastUser(){ localStorage.removeItem('kidsBankLastUser'); }
 
-function setLastUser(u){ localStorage.setItem(LAST_USER_KEY,u);}  
-function clearLastUser(){ localStorage.removeItem(LAST_USER_KEY);}  
-
-/************************* STATE ***********************************/
-let data, currentUser;
-const dataReady = loadData().then(d=>{ data=d; populateChildSelect(); attemptAutoLogin(); });
-
-/************************* UI GRAB *********************************/
-const loginDiv=document.getElementById('login');
-const usernameInput=document.getElementById('username');
-const passwordInput=document.getElementById('password');
-const loginErrP=document.getElementById('loginErr');
-const parentPanel=document.getElementById('parentPanel');
-const childPanel=document.getElementById('childPanel');
-
-/************************* AUTH ************************************/
-function authenticate(u,p){
-  if(!data || !data.users || !data.users[u] || data.users[u].password!==p){ loginErrP.textContent='Invalid credentials'; return; }
-  currentUser=u; setLastUser(u); loginDiv.classList.add('hidden');
-  (data.users[u].role==='parent')?showParent():showChild();
-}
-
-async function attemptAutoLogin(){
-  const last=localStorage.getItem(LAST_USER_KEY);
-  if(last){ await dataReady; if(data.users[last]) authenticate(last,data.users[last].password); }
-}
-
-/************************* PARENT **********************************/
-const childSelect=document.getElementById('childSelect');
-const txnTypeSel=document.getElementById('txnType');
-const reasonInput=document.getElementById('reason');
-const amountInput=document.getElementById('amount');
-const parentBalDiv=document.getElementById('parentBalances');
-
+/* ====== UI renderers ====== */
 function populateChildSelect(){
-  if(!childSelect) return;
-  childSelect.innerHTML='';
-  if(!data) return;
-  for(const c of Object.keys(data.accounts)){
-    const o=document.createElement('option'); o.value=c; o.textContent=c; childSelect.appendChild(o);
-  }
+  const sel=document.getElementById('childSelect');
+  const swSel=document.getElementById('switchChild');
+  sel.innerHTML=''; swSel.innerHTML='';
+  Object.keys(data.accounts).forEach(k=>{
+    let o1=document.createElement('option');o1.value=k;o1.textContent=k;sel.appendChild(o1);
+    let o2=document.createElement('option');o2.value=k;o2.textContent=k;swSel.appendChild(o2);
+  });
 }
-
-async function handleGive(){
-  const child=childSelect.value; const amt=parseFloat(amountInput.value); const reason=reasonInput.value.trim();
-  if(!child||isNaN(amt)||!reason){alert('Fill all fields'); return;}
-  const signed=(txnTypeSel.value==='debit'?-amt:amt);
-  const txn={reason,amt:signed,date:new Date().toLocaleString()};
-  data.accounts[child].balance+=signed; data.accounts[child].transactions.unshift(txn);
-  await saveData(data);
-  renderParentBalances(); reasonInput.value=''; amountInput.value='';
-}
-
 function renderParentBalances(){
-  parentBalDiv.innerHTML='<h3>Balances</h3>';
-  for(const [c,acc] of Object.entries(data.accounts)){
-    const d=document.createElement('div'); d.className='txn';
-    d.innerHTML=`<span>${c}</span><span>${acc.balance.toFixed(2)}</span>`; parentBalDiv.appendChild(d);
-  }
+  const c=document.getElementById('parentBalances');
+  c.innerHTML='<h3>Balances</h3>';
+  Object.entries(data.accounts).forEach(([k,acc])=>{
+    const d=document.createElement('div');
+    d.className='txn';
+    d.innerHTML=`<span>${k}</span><span>${acc.balance.toFixed(2)}</span>`;
+    c.appendChild(d);
+  });
 }
-function showParent(){ parentPanel.classList.remove('hidden'); renderParentBalances(); }
-
-/************************* CHILD ***********************************/
-const childNameSpan=document.getElementById('childName');
-const childBalDiv=document.getElementById('childBalance');
-const childTxnsDiv=document.getElementById('childTxns');
-
 function renderChild(){
   const acc=data.accounts[currentUser];
-  childNameSpan.textContent=currentUser; childBalDiv.textContent=acc.balance.toFixed(2); childTxnsDiv.innerHTML='';
-  if(!acc.transactions.length){ childTxnsDiv.textContent='No transactions yet.'; return; }
-  for(const t of acc.transactions){ const d=document.createElement('div'); d.className='txn'; const sign=t.amt>=0?'+':'-';
-    d.innerHTML=`<span>${t.date.split(',')[0]}</span><span>${t.reason}</span><span>${sign}${Math.abs(t.amt).toFixed(2)}</span>`;
-    childTxnsDiv.appendChild(d); }
+  document.getElementById('childName').textContent=currentUser;
+  document.getElementById('childBalance').textContent=acc.balance.toFixed(2);
+  const list=document.getElementById('childTxns');
+  list.innerHTML='';
+  if(!acc.transactions.length){list.textContent='No transactions yet.';return;}
+  acc.transactions.forEach(t=>{
+    const div=document.createElement('div');
+    div.className='txn';
+    const sign=t.amt>=0?'+':'-';
+    div.innerHTML=`<span>${new Date(t.date).toLocaleDateString()}</span><span>${t.reason}</span><span>${sign}${Math.abs(t.amt).toFixed(2)}</span>`;
+    list.appendChild(div);
+  });
 }
-function showChild(){ childPanel.classList.remove('hidden'); renderChild(); }
 
-/************************ LOGOUT/SWITCH ****************************/
-function logout(){ clearLastUser(); currentUser=null; parentPanel.classList.add('hidden'); childPanel.classList.add('hidden'); loginDiv.classList.remove('hidden'); }
-function switchChild(){ logout(); usernameInput.value=''; passwordInput.value=''; usernameInput.focus(); }
+/* ====== workflows ====== */
+function showParent(){
+  document.getElementById('login').classList.add('hidden');
+  document.getElementById('childPanel').classList.add('hidden');
+  document.getElementById('parentPanel').classList.remove('hidden');
+  populateChildSelect();
+  renderParentBalances();
+}
+function showChild(){
+  document.getElementById('login').classList.add('hidden');
+  document.getElementById('parentPanel').classList.add('hidden');
+  document.getElementById('childPanel').classList.remove('hidden');
+  document.getElementById('switchChild').value=currentUser;
+  renderChild();
+}
+function logout(){
+  clearLastUser();
+  currentUser=null;
+  document.getElementById('parentPanel').classList.add('hidden');
+  document.getElementById('childPanel').classList.add('hidden');
+  document.getElementById('login').classList.remove('hidden');
+}
+function authenticate(u,p){
+  if(data.users[u] && data.users[u].password===p){
+    currentUser=u;
+    setLastUser(u);
+    (data.users[u].role==='parent')?showParent():showChild();
+  }else{
+    document.getElementById('loginErr').textContent='Invalid credentials';
+  }
+}
 
-/************************ DOM EVENTS *******************************/
-document.addEventListener('DOMContentLoaded',()=>{
-  document
+/* ====== main init ====== */
+async function init(){
+  data = await loadData();
+  // auto-login if remembered
+  const last=localStorage.getItem('kidsBankLastUser');
+  if(last && data.users[last]){ currentUser=last; (data.users[last].role==='parent')?showParent():showChild(); }
+
+  // login form
+  document.getElementById('loginBtn').addEventListener('click',()=>{
+    const u=document.getElementById('username').value.trim().toLowerCase();
+    const p=document.getElementById('password').value.trim();
+    authenticate(u,p);
+  });
+  // quick logins
+  document.getElementById('btnAbdullah').addEventListener('click',()=>authenticate('abdullah','1234'));
+  document.getElementById('btnMusab').addEventListener('click',()=>authenticate('musab','1234'));
+  // parent actions
+  document.getElementById('giveBtn').addEventListener('click',async ()=>{
+    const child=document.getElementById('childSelect').value;
+    const reason=document.getElementById('reason').value.trim();
+    const amt=parseFloat(document.getElementById('amount').value);
+    const type=document.getElementById('txnType').value;
+    if(!child||!reason||isNaN(amt)){alert('Fill all fields');return;}
+    const signed= type==='debit'? -amt : amt;
+    const txn={reason,amt:signed,date:new Date().toISOString()};
+    const acc=data.accounts[child];
+    acc.balance+=signed;
+    acc.transactions.unshift(txn);
+    acc.transactions=acc.transactions.slice(0,MAX_TXNS);
+    await saveData(data);
+    document.getElementById('reason').value=''; document.getElementById('amount').value='';
+    renderParentBalances();
+    if(currentUser!==null && currentUser!=='parent'){ renderChild(); }
+  });
+  document.getElementById('parentLogout').addEventListener('click',logout);
+  // child actions
+  document.getElementById('switchChild').addEventListener('change',e=>{
+    currentUser=e.target.value;
+    setLastUser(currentUser);
+    renderChild();
+  });
+  document.getElementById('childLogout').addEventListener('click',logout);
+}
+
+document.addEventListener('DOMContentLoaded',init);
+</script>
+
+</body>
+</html>
