--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
 <script>
 /* ====== CONFIG ====== */
-const BIN_ID   = "YOUR_BIN_ID";
-const API_KEY  = "YOUR_API_KEY";
+const BIN_ID   = "687bd846480911522001db09";
+const API_KEY  = "$2a$10$BB0v8qWkEKADSXDUG7azp.6KMczQbobXJNaM.Xx1qPOCNz7S7smpe";
 const MAX_TXNS = 20;
 const DEFAULT_DATA = {
   users:{
