--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ async function saveData(newData) {
       // ⚠️ uncomment next line **only** if your bin is “Secret (private)”
       // "X-Access-Key": "<YOUR_ACCESS_KEY>"
     },
-    body: JSON.stringify({ record: newData })
+    body: JSON.stringify({  newData })
   });
 
   if (!res.ok) {
