--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h3>Give / Take Money</h3>
     <select id="childSelect"></select>
     <select id="txnType">
-      <option value="credit">Credit</option>
+      <option selected="selected" value="credit">Credit</option>
       <option value="debit">Debit</option>
     </select>
     <input id="reason" placeholder="Reason"/>
